# lightx

./: .gitignore  CMakeLists.txt  Readme.md  t.py
examples/: CMakeLists.txt  main.cpp  test.cpp
include/entity/: line_info.h  line_info.hpp  port_info.h  port_info.hpp
include/model/: main_thread.h  node_manager.h
include/node/: common.h  node.h  node_widget.h  port.h
include/nodes/: camera_node.h  image_convert.h  node.h  node_widget.h  port.h  split_image_node.h  threshold_node.h
include/opencv2/gapi/util/: any.hpp
include/qwidgets/common/: color.hpp  config.hpp  font.hpp  icon.hpp
include/qwidgets/components/widgets/: label.hpp  line_edit.hpp  stacked_widget.hpp
include/qwidgets/window/: stacked_widget.hpp
include/utils/: common.h  image_utils.hpp  utils.h  uuid.h  uuid.hpp
include/widget/: bezier_curve_item.h  drag_label.h  graphics_view.h  mainwidow.h
include/widgets/: bezier_curve_item.h  editor.h  graphics_view.h  mainwidow.h  port_widget.h  scene.h  sidebar_widget.h  tree_widget.h
lib/opencv2/: libopencv_world.so.408
node/: CMakeLists.txt  node.cpp  node_widget.cpp  port.cpp
nodes/: CMakeLists.txt  node.cpp  node_widget.cpp  port.cpp
nodes/camera/: CMakeLists.txt  camera_node.cpp
nodes/image/: CMakeLists.txt  image_convert.cpp  split_image_node.cpp  threshold_node.cpp
src/: CMakeLists.txt  main.cpp
src/model/: main_thread.cpp  node_manager.cpp
src/node/: CMakeLists.txt  node.cpp  node_widget.cpp  port.cpp
src/utils/: utils.cpp  uuid.cpp
src/widget/: bezier_curve_item.cpp  drag_label.cpp  graphics_view.cpp  mainwidow.cpp
src/widgets/: bezier_curve_item.cpp  drag_label.cpp  editor.cpp  graphics_view.cpp  mainwidow.cpp  port_widget.cpp  scene.cpp  sidebar_widget.cpp  tree_widget.cpp
